# gcups-rs

./: AGENTS.md  Cargo.toml  PROTOCOL.md  README.md  flake.nix
src/: bin.rs  lib.rs
