[package]
name = "gcups"
version = "0.1.0"
edition = "2024"
description = "GreenCell UPS monitor — reads battery and charging status via USB HID"

[lib]
name = "gcups"
path = "src/lib.rs"

[[bin]]
name = "gcups"
path = "src/bin.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusb = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"